fix bug with li on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -206,7 +206,7 @@ footer
     white-space:nowrap;
   }
 
-  header nav li
+  header nav ul li
   {
     display:inline;
   }
